parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> StartCode
Rule 1     StartCode -> START_CODE InternalCode END_CODE
Rule 2     StartCode -> <empty>
Rule 3     InternalCode -> CLASS IDENTIFIER OPEN_CURLY_BRACE ClassCode CLOSE_CURLY_BRACE InternalCode
Rule 4     InternalCode -> VARIABLE EQUALS NEW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON InternalCode
Rule 5     InternalCode -> dec_var InternalCode
Rule 6     InternalCode -> dec_fun InternalCode
Rule 7     InternalCode -> VARIABLE EQUALS expr SEMICOLON InternalCode
Rule 8     InternalCode -> CallRetFun InternalCode
Rule 9     InternalCode -> print InternalCode
Rule 10    InternalCode -> CallClassFun InternalCode
Rule 11    InternalCode -> <empty>
Rule 12    CallClassFun -> VARIABLE EQUALS VARIABLE ARROW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
Rule 13    CallClassFun -> VARIABLE ARROW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
Rule 14    ClassCode -> dec_var ClassCode
Rule 15    ClassCode -> dec_fun ClassCode
Rule 16    ClassCode -> VARIABLE EQUALS expr SEMICOLON ClassCode
Rule 17    ClassCode -> CallRetFun ClassCode
Rule 18    ClassCode -> <empty>
Rule 19    CallFun -> IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
Rule 20    CallFun -> CallRetFun
Rule 21    CallRetFun -> VARIABLE EQUALS IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
Rule 22    dec_fun -> FUNCTION IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE OPEN_CURLY_BRACE fun_code CLOSE_CURLY_BRACE
Rule 23    parameter -> VARIABLE COMMA parameter
Rule 24    parameter -> VARIABLE
Rule 25    parameter -> <empty>
Rule 26    fun_code -> dec_var fun_code
Rule 27    fun_code -> print fun_code
Rule 28    fun_code -> VARIABLE EQUALS expr SEMICOLON fun_code
Rule 29    fun_code -> CallFun fun_code
Rule 30    fun_code -> FunRet SEMICOLON
Rule 31    fun_code -> <empty>
Rule 32    dec_var -> VARIABLE EQUALS DOUBLE_QUOTE string DOUBLE_QUOTE SEMICOLON
Rule 33    dec_var -> VARIABLE EQUALS CONST SEMICOLON
Rule 34    print -> PRINT SINGLE_QUOTE string SINGLE_QUOTE PrintData SEMICOLON
Rule 35    print -> PRINT VARIABLE SEMICOLON
Rule 36    PrintData -> DOT SINGLE_QUOTE string SINGLE_QUOTE PrintData
Rule 37    PrintData -> DOT VARIABLE PrintData
Rule 38    PrintData -> <empty>
Rule 39    string -> IDENTIFIER string
Rule 40    string -> <empty>
Rule 41    expr -> expr PLUS term
Rule 42    expr -> expr MINUS term
Rule 43    expr -> term
Rule 44    term -> term TIMES factor
Rule 45    term -> term DIVIDE factor
Rule 46    term -> factor
Rule 47    factor -> IDENTIFIER
Rule 48    factor -> CONST
Rule 49    factor -> VARIABLE
Rule 50    FunRet -> RETURN VARIABLE
Rule 51    FunRet -> RETURN SINGLE_QUOTE string SINGLE_QUOTE
Rule 52    FunRet -> RETURN TRUE
Rule 53    FunRet -> RETURN FALSE

Terminals, with rules where they appear

ARROW                : 12 13
CLASS                : 3
CLOSE_BRACE          : 4 12 13 19 21 22
CLOSE_CURLY_BRACE    : 3 22
COMMA                : 23
CONST                : 33 48
DIVIDE               : 45
DOT                  : 36 37
DOUBLE_QUOTE         : 32 32
END_CODE             : 1
EQUALS               : 4 7 12 16 21 28 32 33
FALSE                : 53
FUNCTION             : 22
IDENTIFIER           : 3 4 12 13 19 21 22 39 47
MINUS                : 42
NEW                  : 4
OPEN_BRACE           : 4 12 13 19 21 22
OPEN_CURLY_BRACE     : 3 22
PLUS                 : 41
PRINT                : 34 35
RETURN               : 50 51 52 53
SEMICOLON            : 4 7 12 13 16 19 21 28 30 32 33 34 35
SINGLE_QUOTE         : 34 34 36 36 51 51
START_CODE           : 1
TIMES                : 44
TRUE                 : 52
VARIABLE             : 4 7 12 12 13 16 21 23 24 28 32 33 35 37 49 50
error                : 

Nonterminals, with rules where they appear

CallClassFun         : 10
CallFun              : 29
CallRetFun           : 8 17 20
ClassCode            : 3 14 15 16 17
FunRet               : 30
InternalCode         : 1 3 4 5 6 7 8 9 10
PrintData            : 34 36 37
StartCode            : 0
dec_fun              : 6 15
dec_var              : 5 14 26
expr                 : 7 16 28 41 42
factor               : 44 45 46
fun_code             : 22 26 27 28 29
parameter            : 4 12 13 19 21 22 23
print                : 9 27
string               : 32 34 36 39 51
term                 : 41 42 43 44 45

Parsing method: LALR

state 0

    (0) S' -> . StartCode
    (1) StartCode -> . START_CODE InternalCode END_CODE
    (2) StartCode -> .

    START_CODE      shift and go to state 1
    $end            reduce using rule 2 (StartCode -> .)

    StartCode                      shift and go to state 2

state 1

    (1) StartCode -> START_CODE . InternalCode END_CODE
    (3) InternalCode -> . CLASS IDENTIFIER OPEN_CURLY_BRACE ClassCode CLOSE_CURLY_BRACE InternalCode
    (4) InternalCode -> . VARIABLE EQUALS NEW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON InternalCode
    (5) InternalCode -> . dec_var InternalCode
    (6) InternalCode -> . dec_fun InternalCode
    (7) InternalCode -> . VARIABLE EQUALS expr SEMICOLON InternalCode
    (8) InternalCode -> . CallRetFun InternalCode
    (9) InternalCode -> . print InternalCode
    (10) InternalCode -> . CallClassFun InternalCode
    (11) InternalCode -> .
    (32) dec_var -> . VARIABLE EQUALS DOUBLE_QUOTE string DOUBLE_QUOTE SEMICOLON
    (33) dec_var -> . VARIABLE EQUALS CONST SEMICOLON
    (22) dec_fun -> . FUNCTION IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE OPEN_CURLY_BRACE fun_code CLOSE_CURLY_BRACE
    (21) CallRetFun -> . VARIABLE EQUALS IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
    (34) print -> . PRINT SINGLE_QUOTE string SINGLE_QUOTE PrintData SEMICOLON
    (35) print -> . PRINT VARIABLE SEMICOLON
    (12) CallClassFun -> . VARIABLE EQUALS VARIABLE ARROW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
    (13) CallClassFun -> . VARIABLE ARROW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON

    CLASS           shift and go to state 8
    VARIABLE        shift and go to state 6
    END_CODE        reduce using rule 11 (InternalCode -> .)
    FUNCTION        shift and go to state 11
    PRINT           shift and go to state 10

    CallClassFun                   shift and go to state 3
    print                          shift and go to state 4
    CallRetFun                     shift and go to state 7
    InternalCode                   shift and go to state 5
    dec_var                        shift and go to state 12
    dec_fun                        shift and go to state 9

state 2

    (0) S' -> StartCode .



state 3

    (10) InternalCode -> CallClassFun . InternalCode
    (3) InternalCode -> . CLASS IDENTIFIER OPEN_CURLY_BRACE ClassCode CLOSE_CURLY_BRACE InternalCode
    (4) InternalCode -> . VARIABLE EQUALS NEW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON InternalCode
    (5) InternalCode -> . dec_var InternalCode
    (6) InternalCode -> . dec_fun InternalCode
    (7) InternalCode -> . VARIABLE EQUALS expr SEMICOLON InternalCode
    (8) InternalCode -> . CallRetFun InternalCode
    (9) InternalCode -> . print InternalCode
    (10) InternalCode -> . CallClassFun InternalCode
    (11) InternalCode -> .
    (32) dec_var -> . VARIABLE EQUALS DOUBLE_QUOTE string DOUBLE_QUOTE SEMICOLON
    (33) dec_var -> . VARIABLE EQUALS CONST SEMICOLON
    (22) dec_fun -> . FUNCTION IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE OPEN_CURLY_BRACE fun_code CLOSE_CURLY_BRACE
    (21) CallRetFun -> . VARIABLE EQUALS IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
    (34) print -> . PRINT SINGLE_QUOTE string SINGLE_QUOTE PrintData SEMICOLON
    (35) print -> . PRINT VARIABLE SEMICOLON
    (12) CallClassFun -> . VARIABLE EQUALS VARIABLE ARROW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
    (13) CallClassFun -> . VARIABLE ARROW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON

    CLASS           shift and go to state 8
    VARIABLE        shift and go to state 6
    END_CODE        reduce using rule 11 (InternalCode -> .)
    FUNCTION        shift and go to state 11
    PRINT           shift and go to state 10

    CallClassFun                   shift and go to state 3
    print                          shift and go to state 4
    InternalCode                   shift and go to state 13
    CallRetFun                     shift and go to state 7
    dec_var                        shift and go to state 12
    dec_fun                        shift and go to state 9

state 4

    (9) InternalCode -> print . InternalCode
    (3) InternalCode -> . CLASS IDENTIFIER OPEN_CURLY_BRACE ClassCode CLOSE_CURLY_BRACE InternalCode
    (4) InternalCode -> . VARIABLE EQUALS NEW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON InternalCode
    (5) InternalCode -> . dec_var InternalCode
    (6) InternalCode -> . dec_fun InternalCode
    (7) InternalCode -> . VARIABLE EQUALS expr SEMICOLON InternalCode
    (8) InternalCode -> . CallRetFun InternalCode
    (9) InternalCode -> . print InternalCode
    (10) InternalCode -> . CallClassFun InternalCode
    (11) InternalCode -> .
    (32) dec_var -> . VARIABLE EQUALS DOUBLE_QUOTE string DOUBLE_QUOTE SEMICOLON
    (33) dec_var -> . VARIABLE EQUALS CONST SEMICOLON
    (22) dec_fun -> . FUNCTION IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE OPEN_CURLY_BRACE fun_code CLOSE_CURLY_BRACE
    (21) CallRetFun -> . VARIABLE EQUALS IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
    (34) print -> . PRINT SINGLE_QUOTE string SINGLE_QUOTE PrintData SEMICOLON
    (35) print -> . PRINT VARIABLE SEMICOLON
    (12) CallClassFun -> . VARIABLE EQUALS VARIABLE ARROW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
    (13) CallClassFun -> . VARIABLE ARROW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON

    CLASS           shift and go to state 8
    VARIABLE        shift and go to state 6
    END_CODE        reduce using rule 11 (InternalCode -> .)
    FUNCTION        shift and go to state 11
    PRINT           shift and go to state 10

    print                          shift and go to state 4
    CallClassFun                   shift and go to state 3
    InternalCode                   shift and go to state 14
    CallRetFun                     shift and go to state 7
    dec_var                        shift and go to state 12
    dec_fun                        shift and go to state 9

state 5

    (1) StartCode -> START_CODE InternalCode . END_CODE

    END_CODE        shift and go to state 15


state 6

    (4) InternalCode -> VARIABLE . EQUALS NEW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON InternalCode
    (7) InternalCode -> VARIABLE . EQUALS expr SEMICOLON InternalCode
    (32) dec_var -> VARIABLE . EQUALS DOUBLE_QUOTE string DOUBLE_QUOTE SEMICOLON
    (33) dec_var -> VARIABLE . EQUALS CONST SEMICOLON
    (21) CallRetFun -> VARIABLE . EQUALS IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
    (12) CallClassFun -> VARIABLE . EQUALS VARIABLE ARROW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
    (13) CallClassFun -> VARIABLE . ARROW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON

    EQUALS          shift and go to state 16
    ARROW           shift and go to state 17


state 7

    (8) InternalCode -> CallRetFun . InternalCode
    (3) InternalCode -> . CLASS IDENTIFIER OPEN_CURLY_BRACE ClassCode CLOSE_CURLY_BRACE InternalCode
    (4) InternalCode -> . VARIABLE EQUALS NEW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON InternalCode
    (5) InternalCode -> . dec_var InternalCode
    (6) InternalCode -> . dec_fun InternalCode
    (7) InternalCode -> . VARIABLE EQUALS expr SEMICOLON InternalCode
    (8) InternalCode -> . CallRetFun InternalCode
    (9) InternalCode -> . print InternalCode
    (10) InternalCode -> . CallClassFun InternalCode
    (11) InternalCode -> .
    (32) dec_var -> . VARIABLE EQUALS DOUBLE_QUOTE string DOUBLE_QUOTE SEMICOLON
    (33) dec_var -> . VARIABLE EQUALS CONST SEMICOLON
    (22) dec_fun -> . FUNCTION IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE OPEN_CURLY_BRACE fun_code CLOSE_CURLY_BRACE
    (21) CallRetFun -> . VARIABLE EQUALS IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
    (34) print -> . PRINT SINGLE_QUOTE string SINGLE_QUOTE PrintData SEMICOLON
    (35) print -> . PRINT VARIABLE SEMICOLON
    (12) CallClassFun -> . VARIABLE EQUALS VARIABLE ARROW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
    (13) CallClassFun -> . VARIABLE ARROW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON

    CLASS           shift and go to state 8
    VARIABLE        shift and go to state 6
    END_CODE        reduce using rule 11 (InternalCode -> .)
    FUNCTION        shift and go to state 11
    PRINT           shift and go to state 10

    CallClassFun                   shift and go to state 3
    print                          shift and go to state 4
    CallRetFun                     shift and go to state 7
    InternalCode                   shift and go to state 18
    dec_var                        shift and go to state 12
    dec_fun                        shift and go to state 9

state 8

    (3) InternalCode -> CLASS . IDENTIFIER OPEN_CURLY_BRACE ClassCode CLOSE_CURLY_BRACE InternalCode

    IDENTIFIER      shift and go to state 19


state 9

    (6) InternalCode -> dec_fun . InternalCode
    (3) InternalCode -> . CLASS IDENTIFIER OPEN_CURLY_BRACE ClassCode CLOSE_CURLY_BRACE InternalCode
    (4) InternalCode -> . VARIABLE EQUALS NEW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON InternalCode
    (5) InternalCode -> . dec_var InternalCode
    (6) InternalCode -> . dec_fun InternalCode
    (7) InternalCode -> . VARIABLE EQUALS expr SEMICOLON InternalCode
    (8) InternalCode -> . CallRetFun InternalCode
    (9) InternalCode -> . print InternalCode
    (10) InternalCode -> . CallClassFun InternalCode
    (11) InternalCode -> .
    (32) dec_var -> . VARIABLE EQUALS DOUBLE_QUOTE string DOUBLE_QUOTE SEMICOLON
    (33) dec_var -> . VARIABLE EQUALS CONST SEMICOLON
    (22) dec_fun -> . FUNCTION IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE OPEN_CURLY_BRACE fun_code CLOSE_CURLY_BRACE
    (21) CallRetFun -> . VARIABLE EQUALS IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
    (34) print -> . PRINT SINGLE_QUOTE string SINGLE_QUOTE PrintData SEMICOLON
    (35) print -> . PRINT VARIABLE SEMICOLON
    (12) CallClassFun -> . VARIABLE EQUALS VARIABLE ARROW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
    (13) CallClassFun -> . VARIABLE ARROW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON

    CLASS           shift and go to state 8
    VARIABLE        shift and go to state 6
    END_CODE        reduce using rule 11 (InternalCode -> .)
    FUNCTION        shift and go to state 11
    PRINT           shift and go to state 10

    CallClassFun                   shift and go to state 3
    print                          shift and go to state 4
    CallRetFun                     shift and go to state 7
    InternalCode                   shift and go to state 20
    dec_var                        shift and go to state 12
    dec_fun                        shift and go to state 9

state 10

    (34) print -> PRINT . SINGLE_QUOTE string SINGLE_QUOTE PrintData SEMICOLON
    (35) print -> PRINT . VARIABLE SEMICOLON

    SINGLE_QUOTE    shift and go to state 22
    VARIABLE        shift and go to state 21


state 11

    (22) dec_fun -> FUNCTION . IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE OPEN_CURLY_BRACE fun_code CLOSE_CURLY_BRACE

    IDENTIFIER      shift and go to state 23


state 12

    (5) InternalCode -> dec_var . InternalCode
    (3) InternalCode -> . CLASS IDENTIFIER OPEN_CURLY_BRACE ClassCode CLOSE_CURLY_BRACE InternalCode
    (4) InternalCode -> . VARIABLE EQUALS NEW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON InternalCode
    (5) InternalCode -> . dec_var InternalCode
    (6) InternalCode -> . dec_fun InternalCode
    (7) InternalCode -> . VARIABLE EQUALS expr SEMICOLON InternalCode
    (8) InternalCode -> . CallRetFun InternalCode
    (9) InternalCode -> . print InternalCode
    (10) InternalCode -> . CallClassFun InternalCode
    (11) InternalCode -> .
    (32) dec_var -> . VARIABLE EQUALS DOUBLE_QUOTE string DOUBLE_QUOTE SEMICOLON
    (33) dec_var -> . VARIABLE EQUALS CONST SEMICOLON
    (22) dec_fun -> . FUNCTION IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE OPEN_CURLY_BRACE fun_code CLOSE_CURLY_BRACE
    (21) CallRetFun -> . VARIABLE EQUALS IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
    (34) print -> . PRINT SINGLE_QUOTE string SINGLE_QUOTE PrintData SEMICOLON
    (35) print -> . PRINT VARIABLE SEMICOLON
    (12) CallClassFun -> . VARIABLE EQUALS VARIABLE ARROW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
    (13) CallClassFun -> . VARIABLE ARROW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON

    CLASS           shift and go to state 8
    VARIABLE        shift and go to state 6
    END_CODE        reduce using rule 11 (InternalCode -> .)
    FUNCTION        shift and go to state 11
    PRINT           shift and go to state 10

    CallClassFun                   shift and go to state 3
    print                          shift and go to state 4
    CallRetFun                     shift and go to state 7
    InternalCode                   shift and go to state 24
    dec_var                        shift and go to state 12
    dec_fun                        shift and go to state 9

state 13

    (10) InternalCode -> CallClassFun InternalCode .

    END_CODE        reduce using rule 10 (InternalCode -> CallClassFun InternalCode .)


state 14

    (9) InternalCode -> print InternalCode .

    END_CODE        reduce using rule 9 (InternalCode -> print InternalCode .)


state 15

    (1) StartCode -> START_CODE InternalCode END_CODE .

    $end            reduce using rule 1 (StartCode -> START_CODE InternalCode END_CODE .)


state 16

    (4) InternalCode -> VARIABLE EQUALS . NEW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON InternalCode
    (7) InternalCode -> VARIABLE EQUALS . expr SEMICOLON InternalCode
    (32) dec_var -> VARIABLE EQUALS . DOUBLE_QUOTE string DOUBLE_QUOTE SEMICOLON
    (33) dec_var -> VARIABLE EQUALS . CONST SEMICOLON
    (21) CallRetFun -> VARIABLE EQUALS . IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
    (12) CallClassFun -> VARIABLE EQUALS . VARIABLE ARROW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
    (41) expr -> . expr PLUS term
    (42) expr -> . expr MINUS term
    (43) expr -> . term
    (44) term -> . term TIMES factor
    (45) term -> . term DIVIDE factor
    (46) term -> . factor
    (47) factor -> . IDENTIFIER
    (48) factor -> . CONST
    (49) factor -> . VARIABLE

    NEW             shift and go to state 25
    DOUBLE_QUOTE    shift and go to state 32
    CONST           shift and go to state 31
    IDENTIFIER      shift and go to state 26
    VARIABLE        shift and go to state 29

    expr                           shift and go to state 28
    factor                         shift and go to state 30
    term                           shift and go to state 27

state 17

    (13) CallClassFun -> VARIABLE ARROW . IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON

    IDENTIFIER      shift and go to state 33


state 18

    (8) InternalCode -> CallRetFun InternalCode .

    END_CODE        reduce using rule 8 (InternalCode -> CallRetFun InternalCode .)


state 19

    (3) InternalCode -> CLASS IDENTIFIER . OPEN_CURLY_BRACE ClassCode CLOSE_CURLY_BRACE InternalCode

    OPEN_CURLY_BRACE shift and go to state 34


state 20

    (6) InternalCode -> dec_fun InternalCode .

    END_CODE        reduce using rule 6 (InternalCode -> dec_fun InternalCode .)


state 21

    (35) print -> PRINT VARIABLE . SEMICOLON

    SEMICOLON       shift and go to state 35


state 22

    (34) print -> PRINT SINGLE_QUOTE . string SINGLE_QUOTE PrintData SEMICOLON
    (39) string -> . IDENTIFIER string
    (40) string -> .

    IDENTIFIER      shift and go to state 36
    SINGLE_QUOTE    reduce using rule 40 (string -> .)

    string                         shift and go to state 37

state 23

    (22) dec_fun -> FUNCTION IDENTIFIER . OPEN_BRACE parameter CLOSE_BRACE OPEN_CURLY_BRACE fun_code CLOSE_CURLY_BRACE

    OPEN_BRACE      shift and go to state 38


state 24

    (5) InternalCode -> dec_var InternalCode .

    END_CODE        reduce using rule 5 (InternalCode -> dec_var InternalCode .)


state 25

    (4) InternalCode -> VARIABLE EQUALS NEW . IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON InternalCode

    IDENTIFIER      shift and go to state 39


state 26

    (21) CallRetFun -> VARIABLE EQUALS IDENTIFIER . OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
    (47) factor -> IDENTIFIER .

    OPEN_BRACE      shift and go to state 40
    TIMES           reduce using rule 47 (factor -> IDENTIFIER .)
    DIVIDE          reduce using rule 47 (factor -> IDENTIFIER .)
    SEMICOLON       reduce using rule 47 (factor -> IDENTIFIER .)
    PLUS            reduce using rule 47 (factor -> IDENTIFIER .)
    MINUS           reduce using rule 47 (factor -> IDENTIFIER .)


state 27

    (43) expr -> term .
    (44) term -> term . TIMES factor
    (45) term -> term . DIVIDE factor

    SEMICOLON       reduce using rule 43 (expr -> term .)
    PLUS            reduce using rule 43 (expr -> term .)
    MINUS           reduce using rule 43 (expr -> term .)
    TIMES           shift and go to state 42
    DIVIDE          shift and go to state 41


state 28

    (7) InternalCode -> VARIABLE EQUALS expr . SEMICOLON InternalCode
    (41) expr -> expr . PLUS term
    (42) expr -> expr . MINUS term

    SEMICOLON       shift and go to state 43
    PLUS            shift and go to state 44
    MINUS           shift and go to state 45


state 29

    (12) CallClassFun -> VARIABLE EQUALS VARIABLE . ARROW IDENTIFIER OPEN_BRACE parameter CLOSE_BRACE SEMICOLON
    (49) factor -> VARIABLE .

    ARROW           shift and go to state 46
    TIMES           reduce using rule 49 (factor -> VARIABLE .)
    DIVIDE          reduce using rule 49 (factor -> VARIABLE .)
    SEMICOLON       reduce using rule 49 (factor -> VARIABLE .)
    PLUS            reduce using rule 49 (factor -> VARIABLE .)
    MINUS           reduce using rule 49 (factor -> VARIABLE .)


state 30

    (46) term -> factor .
